Fix modal window align

--- a/src/app/components/proxyservers/proxyservers.component.less
+++ b/src/app/components/proxyservers/proxyservers.component.less
@@ -31,6 +31,9 @@
 
     .proxies{
 
+        max-height: 350px;
+        overflow: auto;
+
         .proxy{
             display: flex;
             align-items: center;
